--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -539,13 +539,12 @@ h2.featured_products
 section.content
   margin: 0 auto 360px auto
   max-width: 1300px
-  padding: 0 20px
+  padding: 0 40px
   padding-top: 90px
   width: 100%
   
   @media screen and (max-width: $break-small)
-    padding-bottom: 40px
-    padding-top: 60px
+    padding: 60px 20px 40px
   
   .custom_page
     color: $secondary-text-color
